fix distance in dark mode, padding bugs on mobile, update about text

--- a/scss/darkmode.scss
+++ b/scss/darkmode.scss
@@ -1,4 +1,5 @@
-html.dark-mode, html.dark-mode body {
+
+html.dark-mode, html.dark-mode body{
 	color: $c-w;
 	background-color: $c-d;
 
@@ -40,8 +41,11 @@ html.dark-mode, html.dark-mode body {
 	.sky {
 		.circle {
 			border-color: $c-w;
-			background-position: 50% 100%;
+			background-position: 75% 100%;
 			transform: rotate(-180deg);
+			&:hover {
+				background-position: 50% 100%;
+			}
 		}
 		.tooltip:before {
 			content: attr(data-hover-light);
@@ -64,18 +68,14 @@ html.dark-mode, html.dark-mode body {
 			margin-right: .25em;
 		}
 	}
-	#id-work {
-		.badges img {
-			background-color: rgba(255,255,255,.8);
-		}
+	.badges img {
+		background-color: rgba(255,255,255,.8);
 	}
-	#id-photos {
-		.thumb-container {
-			border-color: $c-d;
-		}
-		.photo-modal, .loading {
-			background-color: #2D2D2D;
-		}
+	.thumb-container {
+		border-color: $c-d;
+	}
+	.photo-modal, .loading {
+		background-color: #2D2D2D;
 	}
 	#id-maps .control {
 		& > input[type="radio"], & > label:before {
@@ -83,6 +83,7 @@ html.dark-mode, html.dark-mode body {
 		}
 		& > input:not(:checked) ~ label:hover:before {
 			box-shadow: inset 0 0 0 .15em $c-4, inset 0 0 0 .1em $c-d;
+			border-color: $c-4;
 		}
 		& > input:checked ~ label:before {
 			box-shadow: inset 0 0 0 .2em $c-d, inset 0 0 0 .6em $c-4;
@@ -117,14 +118,19 @@ html.dark-mode, html.dark-mode body {
 			border: 2px solid black;
 			border-radius: 50%;
 			background-color: red;
-			background-image: linear-gradient(90deg, $c-w, $c-w 50%, $c-b 50%);
+			background-image: linear-gradient(90deg, $c-d, $c-d 50%, $c-w 50%);
 			background-size: 200% 100%;
-			background-position: 150% 100%;
+			background-position: 125% 100%;
 			transition: all .3s ease-in-out, transform .5s ease-in-out;
 			opacity: .75;
 			&:hover {
+				background-position: 150% 100%;
 				opacity: 1; 
 			}
+		}
+		@media screen and (max-width: 56em) {
+			width: 1.67em;
+			height: 1.67em;
 		}
 	}
 	.tooltip {
@@ -133,9 +139,7 @@ html.dark-mode, html.dark-mode body {
 			content: attr(data-hover-dark);
 		}
 	}
-	@media (hover:hover) {
-		.circle-container:hover ~ .tooltip {
-			opacity: 1;
-		}
+	.circle-container:hover ~ .tooltip {
+		opacity: 1;
 	}
 }
